--- a/style.css
+++ b/style.css
@@ -50,3 +50,15 @@ body {
     transform: translateX(-50%);
     animation: float 3s ease-in-out infinite;
 }
+
+@keyframes float {
+
+    0%,
+    100% {
+        transform: translateX(0%) translateY(0);
+    }
+
+    50% {
+        transform: translateX(0%) translateY(-10px);
+    }
+}
