--- a/style.css
+++ b/style.css
@@ -62,3 +62,12 @@ body {
         transform: translateX(0%) translateY(-10px);
     }
 }
+
+.enemy {
+    position: absolute;
+    width: 30px;
+    height: 50px;
+    background-image: url("/images/enemy.png");
+    background-size: cover;
+    background-position: center;
+}
