--- a/style.css
+++ b/style.css
@@ -6,6 +6,31 @@ body {
     height: 100vh;
     overflow: hidden;
     font-family: 'Arial', sans-serif;
+    background-image: url(/images/BG.jpeg);
+
+}
+
+@keyframes stars {
+    0% {
+        background-position: 0 0;
+    }
+
+    100% {
+        background-position: 1000px 1000px;
+    }
+}
+
+body::before {
+    content: '';
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: url("/images/BG.jpeg") repeat;
+    animation: stars 100s linear infinite;
+    opacity: 0.5;
+    z-index: -1;
 }
 
 #game-container {
