[feat]: initialize the game and populate enemies

--- a/style.css
+++ b/style.css
@@ -33,7 +33,7 @@ body::before {
     z-index: -1;
 }
 
-#game-container {
+#gameContainer {
     position: relative;
     width: 800px;
     height: 600px;
