--- a/style.css
+++ b/style.css
@@ -146,3 +146,25 @@ body::before {
   #pauseMenu button:hover {
     background: linear-gradient(135deg, #666, #888);
   }
+
+  .explosion {
+    position: absolute;
+    width: 50px;
+    height: 50px;
+    background-image: url("/images/explosion.png");
+    background-size: cover;
+    opacity: 0.8;
+    animation: explode 0.5s ease-out;
+  }
+
+  @keyframes explode {
+    0% {
+      transform: scale(0);
+      opacity: 1;
+    }
+
+    100% {
+      transform: scale(2);
+      opacity: 0;
+    }
+  }
