--- a/style.css
+++ b/style.css
@@ -1,11 +1,13 @@
+@import url('https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&display=swap');
+
 body {
     margin: 0;
     display: flex;
     justify-content: center;
     align-items: center;
+    font-family: 'Orbitron', sans-serif;
     height: 100vh;
     overflow: hidden;
-    font-family: 'Arial', sans-serif;
     /* background-image: url("/images/BG.jpeg"); */
 
 }
@@ -47,6 +49,8 @@ body::before {
 #sidebar {
     width: 200px;
     height: 600px;
+    font-family: 'Orbitron', sans-serif;
+
     background: linear-gradient(135deg, #1e1e2f, #2a2a40);
     color: #fff;
     padding: 20px;
@@ -85,20 +89,14 @@ body::before {
 .jet1 {background-position: -240px 0px}
 .explosion {background-position: -280px 0px;  opacity: 0.8; animation: explode 0.5s ease-out;}
 .jet2 {background-position: -320px 0px;}
-.rocket1 {background-position: -360 0px;}
-.rocket2 {background-position: -400px 0px;}
+.rocket1 {background-position: -360px 0px;}
+.rocket2 {background-position: -390px 0px;}
 
-#player {
-    /* position: absolute;
-    width: 40px;
-    height: 40px;
-    background-image: url("/images/player-2.png");
-    background-size: cover;
-    background-position: center; */
+.float {
     bottom: 5px;
     left: 50%;
     transform: translateX(-50%);
-    /* animation: float 3s ease-in-out infinite; */
+    animation: float 3s ease-in-out infinite;
 }
 
 @keyframes float {
@@ -113,21 +111,12 @@ body::before {
     }
 }
 
-.asteroid {
-    position: absolute;
-    width: 40px;
-    height: 40px;
-    background-image: url("/images/asteroid.png");
-    background-size: cover;
-    background-position: center;
-}
-
 .bullet {
     position: absolute;
     width: 5px;
     height: 10px;
-    background-color: #ff4444;
-    box-shadow: 0 0 10px #ff4444;
+    /* background-color: #ff4444; */
+    /* box-shadow: 0 0 10px #ff4444; */
     /* animation: pulse 0.5s infinite alternate; */
 }
 
@@ -141,7 +130,7 @@ body::before {
     }
 }
 
-#gameOver {
+#gameOver, #pauseMenu {
     display: none;
     position: absolute;
     top: 50%;
@@ -156,8 +145,8 @@ body::before {
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
-#pauseMenu {
-    display: none;
+.start-menu {
+    display: "block";
     position: absolute;
     top: 50%;
     left: 50%;
@@ -169,7 +158,7 @@ body::before {
     border: 2px solid #444;
     border-radius: 10px;
     box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
-  }
+}
 
 #pauseMenu button {
     margin: 10px;
@@ -186,16 +175,6 @@ body::before {
   #pauseMenu button:hover {
     background: linear-gradient(135deg, #666, #888);
   }
-
-  /* .explosion {
-    position: absolute;
-    width: 50px;
-    height: 50px;
-    background-image: url("/images/explosion.png");
-    background-size: cover;
-    opacity: 0.8;
-    /* animation: explode 0.5s ease-out;
-  } */
 
   @keyframes explode {
     0% {
