feat: add a background for the body

--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Orbitron', sans-serif;
     height: 100vh;
     overflow: hidden;
-    /* background-image: url("/images/BG.jpeg"); */
+    background-color: #2a2a40;
 
 }
 
