--- a/style.css
+++ b/style.css
@@ -8,8 +8,7 @@ body {
     font-family: 'Orbitron', sans-serif;
     height: 100vh;
     overflow: hidden;
-    background-color: #2a2a40;
-
+    /* background-color: #2a2a40; */
 }
 
 @keyframes stars {
