--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Orbitron', sans-serif;
     height: 100vh;
     overflow: hidden;
-    /* background-color: #2a2a40; */
+    background-color: #43435a;
 }
 
 @keyframes stars {
@@ -20,63 +20,43 @@ body {
         background-position: 1000px 1000px;
     }
 }
-/* 
-body::before {
-    content: '';
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    background: url("/images/BG.jpeg") repeat;
-    animation: stars 100s linear infinite;
-    opacity: 0.5;
-    z-index: -1;
-} */
 
 #gameContainer {
     position: relative;
     width: 800px;
     height: 600px;
-    border: 2px solid #444;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
     overflow: hidden;
+    border: 2px solid #444;
 }
 
 /* sidebar */
-
 #sidebar {
     width: 200px;
     height: 600px;
-    font-family: 'Orbitron', sans-serif;
-
     background: linear-gradient(135deg, #1e1e2f, #2a2a40);
     color: #fff;
     padding: 20px;
     box-sizing: border-box;
     border-left: 2px solid #444;
-    box-shadow: 5px 0 10px rgba(0, 0, 0, 0.3);
 }
 
 #sidebar h2 {
     margin: 0 0 20px 0;
     font-size: 24px;
-    text-shadow: 2px 2px 4px rgba(0, 0, 0, 0.5);
 }
 
 #sidebar h3 {
     padding-top: 30px;
 }
 
-
 /* sprites */
-
 .sprite {
     position: absolute;
     width: 40px;
     height: 40px;
     background-image: url("/images/spritesheet-x2.png");
     background-size: cover;
+    will-change: transform;
 }
 
 .greenAlien {background-position: 0px 0px;}
@@ -86,37 +66,17 @@ body::before {
 .asteroid3 {background-position: -160px 0px}
 .asteroid4{background-position: -200px 0px}
 .jet1 {background-position: -240px 0px}
-.explosion {background-position: -280px 0px;  opacity: 0.8; animation: explode 0.5s ease-out;}
+.explosion {position:absolute; background-position: -280px 0px;  opacity: 0.8; animation: explode 0.5s ease-out;}
 .jet2 {background-position: -320px 0px;}
 .rocket1 {background-position: -360px 0px;}
 .rocket2 {background-position: -390px 0px;}
 
-.float {
-    bottom: 5px;
-    left: 50%;
-    transform: translateX(-50%);
-    animation: float 3s ease-in-out infinite;
-}
-
-@keyframes float {
-
-    0%,
-    100% {
-        transform: translateX(0%) translateY(0);
-    }
-
-    50% {
-        transform: translateX(0%) translateY(-10px);
-    }
-}
 
 .bullet {
-    position: absolute;
+    position: absolute; 
     width: 5px;
     height: 10px;
-    /* background-color: #ff4444; */
-    /* box-shadow: 0 0 10px #ff4444; */
-    /* animation: pulse 0.5s infinite alternate; */
+    will-change: transform;
 }
 
 @keyframes pulse {
@@ -132,43 +92,37 @@ body::before {
 #gameOver, #pauseMenu {
     display: none;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(0, 0);
     background-color: rgba(0, 0, 0, 0.8);
     color: #fff;
     padding: 20px;
     text-align: center;
     border: 2px solid #444;
     border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
 .start-menu {
-    display: "block";
+    display: block;
     position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
+    transform: translate(0%, 0%);
     background-color: rgba(0, 0, 0, 0.8);
     color: #fff;
     padding: 20px;
     text-align: center;
     border: 2px solid #444;
     border-radius: 10px;
-    box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
 }
 
 #pauseMenu button, .start-menu button {
     margin: 10px;
     padding: 10px 20px;
+    font-family: 'Orbitron';
     font-size: 16px;
     cursor: pointer;
     background: linear-gradient(135deg, #444, #666);
     color: #fff;
     border: none;
     border-radius: 5px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.3);
   }
 
   #pauseMenu button:hover {
