--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@ body {
     font-family: 'Orbitron', sans-serif;
     height: 100vh;
     overflow: hidden;
-    background-color: #0f0f4d;
+    background-color: #030336;
     /* background-color: #43435a; */
 }
 
@@ -17,15 +17,14 @@ body {
     width: 800px;
     height: 600px;
     overflow: hidden;
-    border: 2px solid #444;
-    background-color: #4545c2;
+    background-color: #181865;
 }
 
 /* sidebar */
 #sidebar {
     width: 200px;
     height: 600px;
-    background-color: #111152;
+    background-color: #020225;
 
     /* background: linear-gradient(135deg, #1e1e2f, #2a2a40); */
     color: #fff;
@@ -77,7 +76,7 @@ body {
     display: none;
     position: absolute;
     transform: translate(0, 0);
-    background-color: rgba(22, 15, 114, 0.8);
+    background-color: #020225d7;
     color: #fff;
     padding: 20px;
     text-align: center;
@@ -89,7 +88,7 @@ body {
     display: block;
     position: absolute;
     transform: translate(0%, 0%);
-    background-color: rgba(1, 6, 48, 0.8);
+    background-color: #020225d7;
     color: #fff;
     padding: 20px;
     text-align: center;
@@ -103,7 +102,7 @@ body {
     font-family: 'Orbitron';
     font-size: 16px;
     cursor: pointer;
-    background-color: #18991f;
+    background-color: #0b9812d4;
     color: #fff;
     border: none;
     border-radius: 5px;
