--- a/style.css
+++ b/style.css
@@ -123,3 +123,28 @@ body {
       opacity: 0;
     }
   }
+
+  .scoreboard {
+    display: none;
+    position: absolute;
+    transform: translate(0, 0);
+    background-color: #020225d7;
+    color: #fff;
+    padding: 20px;
+    text-align: center;
+    border: 2px solid #444;
+    border-radius: 10px;
+  }
+
+  h1 {
+    position: absolute;
+    top: 0;
+    width: 100%;
+    text-align: center;
+    margin: 0;
+    padding: 20px 0;
+    background-color: #020225d7;
+    color: #fff;
+    border-bottom: 2px solid #444;
+    z-index: 10; 
+}
