--- a/style.css
+++ b/style.css
@@ -55,36 +55,46 @@ body {
 .greenAlien {
   background-position: 0px 0px;
 }
+
 .ufo {
   background-position: -40px 0px;
 }
+
 .asteroid1 {
   background-position: -80px 0px;
 }
+
 .asteroid2 {
   background-position: -120px 0px;
 }
+
 .asteroid3 {
   background-position: -160px 0px;
 }
+
 .asteroid4 {
   background-position: -200px 0px;
 }
+
 .jet1 {
   background-position: -240px 0px;
 }
+
 .explosion {
   position: absolute;
   background-position: -280px 0px;
   opacity: 0.8;
   animation: explode 0.5s ease-out;
 }
+
 .jet2 {
   background-position: -320px 0px;
 }
+
 .rocket1 {
   background-position: -360px 0px;
 }
+
 .rocket2 {
   background-position: -400px 0px;
 }
@@ -119,6 +129,7 @@ body {
   text-align: center;
   border: 2px solid #444;
   border-radius: 10px;
+  z-index: 50;
 }
 
 #pauseMenu button,
@@ -161,6 +172,7 @@ body {
   text-align: center;
   border: 2px solid #444;
   border-radius: 10px;
+  z-index: 30;
 }
 
 .scoreboard table {
@@ -203,8 +215,10 @@ h1 {
 }
 
 .pagination {
-  margin-top: 15px; /* Adds space between the table and pagination */
-  text-align: center; /* Centers the pagination buttons */
+  margin-top: 15px;
+  /* Adds space between the table and pagination */
+  text-align: center;
+  /* Centers the pagination buttons */
 }
 
 .pagination button {
@@ -219,6 +233,51 @@ h1 {
 }
 
 .pagination button:disabled {
-  background-color: #555; /* Grey out disabled buttons */
+  background-color: #555;
+  /* Grey out disabled buttons */
   cursor: not-allowed;
+}
+
+.story-screen {
+  display: none;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  background-color: #020225d7;
+  color: #fff;
+  padding: 20px;
+  text-align: center;
+  border: 2px solid #444;
+  border-radius: 10px;
+  z-index: 40;
+  width: 400px;
+}
+
+.story-screen h1 {
+  position: static;
+  margin-top: 0;
+  font-size: 28px;
+  margin-bottom: 10px;
+}
+
+.story-screen p {
+  font-size: 16px;
+  line-height: 1.4;
+  margin-bottom: 20px;
+}
+
+.story-screen button {
+  padding: 10px 20px;
+  font-family: "Orbitron";
+  font-size: 16px;
+  cursor: pointer;
+  background-color: #0b9812d4;
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+}
+
+.story-screen button:hover {
+  background-color: #0b9812aa;
 }
